--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                                                             <div class="service-carousel-wrapper">
                                                                 <div class="owl-carousel" data-pagination="0" data-autoplay="0" data-timer="8000" data-items="3" data-stage-padding="90" data-margin="40">
                                                                     <div class="item">
-                                                                        <a href="practice-areas-1.html"></a>
+                                                                        <a href="aposentadoria.html"></a>
 
                                                                         <div class="service-carousel-image">
                                                                             <div class="service-carousel-image-overflow">
@@ -522,7 +522,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="item">
-                                                                        <a href="practice-areas-1.html"></a>
+                                                                        <a href="aposentadoria.html"></a>
 
                                                                         <div class="service-carousel-image">
                                                                             <div class="service-carousel-image-overflow">
@@ -544,7 +544,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="item">
-                                                                        <a href="practice-areas-1.html"></a>
+                                                                        <a href="aposentadoria.html"></a>
 
                                                                         <div class="service-carousel-image">
                                                                             <div class="service-carousel-image-overflow">
@@ -565,7 +565,7 @@
                                                                     </div>
                                                                     <!--
                                                                     <div class="item">
-                                                                        <a href="practice-areas-1.html"></a>
+                                                                        <a href="aposentadoria.html"></a>
 
                                                                         <div class="service-carousel-image">
                                                                             <div class="service-carousel-image-overflow">
@@ -587,7 +587,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="item">
-                                                                        <a href="practice-areas-1.html"></a>
+                                                                        <a href="aposentadoria.html"></a>
 
                                                                         <div class="service-carousel-image">
                                                                             <div class="service-carousel-image-overflow">
@@ -1658,7 +1658,7 @@
                                                             <!--
                                                             <ul class="elementor-icon-list-items elementor-inline-items">
                                                                 <li class="elementor-icon-list-item elementor-inline-item">
-                                                                    <a href="practice-areas-1.html"> <span class="elementor-icon-list-text">Practice Areas</span> </a>
+                                                                    <a href="aposentadoria.html"> <span class="elementor-icon-list-text">Practice Areas</span> </a>
                                                                 </li>
                                                                 <li class="elementor-icon-list-item elementor-inline-item">
                                                                     <a href="single-attorney.html"> <span class="elementor-icon-list-text">Attorney</span> </a>
