--- a/aposentadoria.html
+++ b/aposentadoria.html
@@ -698,7 +698,7 @@
                                                             <!--
                                                             <ul class="elementor-icon-list-items elementor-inline-items">
                                                                 <li class="elementor-icon-list-item elementor-inline-item">
-                                                                    <a href="practice-areas-1.html"> <span class="elementor-icon-list-text">Practice Areas</span> </a>
+                                                                    <a href="aposentadoria.html"> <span class="elementor-icon-list-text">Practice Areas</span> </a>
                                                                 </li>
                                                                 <li class="elementor-icon-list-item elementor-inline-item">
                                                                     <a href="single-attorney.html"> <span class="elementor-icon-list-text">Attorney</span> </a>
@@ -739,7 +739,7 @@
                                                         data-widget_type="heading.default"
                                                     >
                                                         <div class="elementor-widget-container">
-                                                            <h2 class="elementor-heading-title elementor-size-default">Recursos</h2>
+                                                            <h2 class="elementor-heading-title elementor-size-default">&nbsp;</h2>
                                                         </div>
                                                     </div>
                                                     <div
@@ -752,19 +752,26 @@
                                                         <div class="elementor-widget-container">
                                                             <ul class="elementor-icon-list-items">
                                                                 <li class="elementor-icon-list-item">
-                                                                    <a href="practice-areas-3.html"> <span class="elementor-icon-list-text">Aposentadoria</span> </a>
+                                                                    <a href="aposentadoria.html"> <span class="elementor-icon-list-text">Aposentadorias</span> </a>
                                                                 </li>
                                                                 <li class="elementor-icon-list-item">
-                                                                    <a href="practice-areas-3.html"> <span class="elementor-icon-list-text">Benefícios por incapacidade</span> </a>
+                                                                    <a href="auxilio-doenca-e-aposentadoria-por-invalidez.html"> <span class="elementor-icon-list-text">Auxílio doença e aposentadoria por invalidez</span> </a>
                                                                 </li>
                                                                 <li class="elementor-icon-list-item">
-                                                                    <a href="practice-areas-3.html"> <span class="elementor-icon-list-text">BPC LOAS</span> </a>
+                                                                    <a href="pensao-por-morte.html"> <span class="elementor-icon-list-text">Pensão por morte</span> </a>
                                                                 </li>
-                                                                <!--
                                                                 <li class="elementor-icon-list-item">
-                                                                    <a href="practice-areas-3.html"> <span class="elementor-icon-list-text">National Security Law</span> </a>
+                                                                    <a href="bpc-loas.html"> <span class="elementor-icon-list-text">BPC/LOAS</span> </a>
                                                                 </li>
-                                                                -->
+                                                                <li class="elementor-icon-list-item">
+                                                                    <a href="auxílio-acidente.html"> <span class="elementor-icon-list-text">Auxílio Acidente</span> </a>
+                                                                </li>
+                                                                <li class="elementor-icon-list-item">
+                                                                    <a href="isencao-de-imposto-de-renda.html"> <span class="elementor-icon-list-text">Isenção de Imposto de Renda</span> </a>
+                                                                </li>
+                                                                <li class="elementor-icon-list-item">
+                                                                    <a href="divorcios.html"> <span class="elementor-icon-list-text">Divórcios</span> </a>
+                                                                </li>
                                                             </ul>
                                                         </div>
                                                     </div>
@@ -785,7 +792,7 @@
                                                         data-widget_type="heading.default"
                                                     >
                                                         <div class="elementor-widget-container">
-                                                            <h2 class="elementor-heading-title elementor-size-default">Outros Links</h2>
+                                                            <h2 class="elementor-heading-title elementor-size-default">&nbsp;</h2>
                                                         </div>
                                                     </div>
                                                     <div
@@ -798,13 +805,25 @@
                                                         <div class="elementor-widget-container">
                                                             <ul class="elementor-icon-list-items">
                                                                 <li class="elementor-icon-list-item">
-                                                                    <a href="practice-areas-2.html"> <span class="elementor-icon-list-text">???</span> </a>
+                                                                    <a href="alimentos-guarda-e-regulamentacao-de-visitas.html"> <span class="elementor-icon-list-text">Alimentos, Guarda e regulamentação de visitas</span> </a>
                                                                 </li>
                                                                 <li class="elementor-icon-list-item">
-                                                                    <a href="attorney.html"> <span class="elementor-icon-list-text">???</span> </a>
+                                                                    <a href="planejamento-matrimonial.html"> <span class="elementor-icon-list-text">Planejamento matrimonial</span> </a>
                                                                 </li>
                                                                 <li class="elementor-icon-list-item">
-                                                                    <a href="contact-us-3.html"> <span class="elementor-icon-list-text">???</span> </a>
+                                                                    <a href="inventarios.html"> <span class="elementor-icon-list-text">Inventários</span> </a>
+                                                                </li>
+                                                                <li class="elementor-icon-list-item">
+                                                                    <a href="testamentos.html"> <span class="elementor-icon-list-text">Testamentos</span> </a>
+                                                                </li>
+                                                                <li class="elementor-icon-list-item">
+                                                                    <a href="planejamento-sucessorios.html"> <span class="elementor-icon-list-text">Planejamento Sucessórios</span> </a>
+                                                                </li>
+                                                                <li class="elementor-icon-list-item">
+                                                                    <a href="direito-do-consumidor.html"> <span class="elementor-icon-list-text">Direito do Consumidor</span> </a>
+                                                                </li>
+                                                                <li class="elementor-icon-list-item">
+                                                                    <a href="cobrancas-e-execucoes-de-dividas.html"> <span class="elementor-icon-list-text">Cobranças e execuções de dívidas</span> </a>
                                                                 </li>
                                                             </ul>
                                                         </div>
