txt dos links wpp

--- a/isencao-de-imposto-de-renda.html
+++ b/isencao-de-imposto-de-renda.html
@@ -470,7 +470,7 @@
                                                                     </a>
                                                                 </span>
                                                                 <span class="elementor-grid-item">
-                                                                    <a class="elementor-icon elementor-social-icon elementor-social-icon-whatsapp elementor-repeater-item-38a005f" target="_blank" href="https://wa.me/556236612928?text=Olá! Vim pelo site e gostaria de mais informações sobre Auxílio doença e aposentadoria por invalidez.">
+                                                                    <a class="elementor-icon elementor-social-icon elementor-social-icon-whatsapp elementor-repeater-item-38a005f" target="_blank" href="https://wa.me/556236612928?text=Olá! Vim pelo site e gostaria de mais informações sobre Isenção de Imposto de Renda.">
                                                                         <span class="elementor-screen-only">WhatsApp</span>
                                                                         <i class="fab fa-whatsapp"></i>
                                                                     </a>
