--- a/auxilio-doenca-e-aposentadoria-por-invalidez.html
+++ b/auxilio-doenca-e-aposentadoria-por-invalidez.html
@@ -62,7 +62,7 @@
         <div class="loader-close-button" style="display: none;"><span class="screen-reader-text">Close</span></div>
     </div>
 
-    <div id="perspective" style="">
+    <div id="perspective">
         <!-- Begin mobile menu -->
         <a id="btn-close-mobile-menu" href="javascript:;"></a>
 
