--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                                                         data-widget_type="heading.default"
                                                     >
                                                         <div class="elementor-widget-container">
-                                                            <h2 class="elementor-heading-title elementor-size-default">Dúvidas legais? Acabam aqui.</h2>
+                                                            <h2 class="elementor-heading-title elementor-size-default" style="text-shadow: 0px 0px 10px #FFFFFF;">Dúvidas legais? Acabam aqui.</h2>
                                                         </div>
                                                     </div>
                                                     <div
@@ -369,7 +369,7 @@
                                                         data-widget_type="text-editor.default"
                                                     >
                                                         <div class="elementor-widget-container">
-                                                            <p>
+                                                            <p style="text-shadow: 0px 0px 7px #FFFFFF;">
                                                                 Escritório composto de uma equipe jurídica especializada, pronta para atendê-los.
                                                             </p>
                                                         </div>
