--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet"  href="js/plugins/elementor/assets/lib/font-awesome/css/solid.css?ver=5.15.3" type="text/css" media="all" />
     <link rel="stylesheet"  href="js/plugins/elementor/assets/lib/animations/animations.min.css?ver=3.3.1" type="text/css" media="all" />
     <link rel="stylesheet"  href="js/plugins/elementor/assets/lib/font-awesome/css/brands.css?ver=5.15.3" type="text/css" media="all" />
-    <link rel="stylesheet"  href="css/custom-css.css" type="text/css" media="all" />
+    <link rel="stylesheet"  href="css/custom-css.css?v=1" type="text/css" media="all" />
 
 
     <link rel="stylesheet" id="google-fonts-1-css"  href="https://fonts.googleapis.com/css?family=Roboto%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CRoboto+Slab%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CPoppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CInter%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&#038;display=swap&#038;ver=5.8" type="text/css" media="all"  />
