v1 pra lançamento já com contato
- versão 1.0 do site para lançamento
- contato em php já funcionando pra testes

--- a/bpc-loas.html
+++ b/bpc-loas.html
@@ -366,7 +366,10 @@
                                                                         <p role="status" aria-live="polite" aria-atomic="true"></p>
                                                                         <ul></ul>
                                                                     </div>
-                                                                    <form action="#" method="post" class="wpcf7-form init" data-status="init">
+                                                                    <form action="envia-contato.php" method="post" class="wpcf7-form init" data-status="init">
+
+                                                                        <input type="hidden" name="envia" value="ok" />
+                                                                        <input type="hidden" name="pagina" value="BPC LOAS" />
 
                                                                         <div class="one-half">
                                                                             <span class="wpcf7-form-control-wrap your-name">
@@ -1032,7 +1035,7 @@
                                                                     <a href="practice-areas-3.html"> <span class="elementor-icon-list-text">&nbsp;</span> </a>
                                                                 </li>
                                                                 <li class="elementor-icon-list-item elementor-inline-item">
-                                                                    <a href="practice-areas-3.html"> <span class="elementor-icon-list-text">Abdala Gomes & Paranã Advogados Associados</span> </a>
+                                                                    <a href="index.html"> <span class="elementor-icon-list-text">Abdala Gomes & Paranã Advogados Associados</span> </a>
                                                                 </li>
                                                             </ul>
                                                         </div>
