--- a/index.html
+++ b/index.html
@@ -1515,7 +1515,7 @@
                                                         data-widget_type="heading.default"
                                                     >
                                                         <div class="elementor-widget-container">
-                                                            <h2 class="elementor-heading-title elementor-size-default">Sócias da Abdalla, Gomes e Paranã Advogados Associados</h2>
+                                                            <!--<h2 class="elementor-heading-title elementor-size-default"></h2>-->
                                                         </div>
                                                     </div>
                                                     <div
@@ -1536,11 +1536,13 @@
                                                         data-settings='{"ashton_ext_is_smoove":"true","ashton_ext_smoove_disable":"769","ashton_ext_smoove_duration":800,"ashton_ext_smoove_translatey":{"unit":"px","size":35,"sizes":[]},"ashton_ext_link_sidemenu":"false","ashton_ext_link_fullmenu":"false","ashton_ext_is_sticky":"false","ashton_ext_is_scrollme":"false","ashton_ext_smoove_scalex":{"unit":"px","size":1,"sizes":[]},"ashton_ext_smoove_scaley":{"unit":"px","size":1,"sizes":[]},"ashton_ext_smoove_rotatex":{"unit":"px","size":0,"sizes":[]},"ashton_ext_smoove_rotatey":{"unit":"px","size":0,"sizes":[]},"ashton_ext_smoove_rotatez":{"unit":"px","size":0,"sizes":[]},"ashton_ext_smoove_translatex":{"unit":"px","size":0,"sizes":[]},"ashton_ext_smoove_translatez":{"unit":"px","size":0,"sizes":[]},"ashton_ext_smoove_skewx":{"unit":"px","size":0,"sizes":[]},"ashton_ext_smoove_skewy":{"unit":"px","size":0,"sizes":[]},"ashton_ext_smoove_transform_originx":{"unit":"px","size":50,"sizes":[]},"ashton_ext_smoove_transform_originy":{"unit":"px","size":50,"sizes":[]},"ashton_ext_smoove_perspective":{"unit":"px","size":1000,"sizes":[]},"ashton_ext_is_parallax_mouse":"false","ashton_ext_is_infinite":"false"}'
                                                         data-widget_type="heading.default"
                                                     >
+                                                        <!-- texto removido 
                                                         <div class="elementor-widget-container">
                                                             <h2 class="elementor-heading-title elementor-size-default">
-                                                                <!-- texto removido -->
+                                                                
                                                             </h2>
                                                         </div>
+                                                        -->
                                                     </div>
                                                 </div>
                                             </div>
