tirando "em resumo" dos textos

--- a/auxilio-doenca-e-aposentadoria-por-invalidez.html
+++ b/auxilio-doenca-e-aposentadoria-por-invalidez.html
@@ -284,7 +284,7 @@
 
                                                                                 <p>Além disso, em casos de negativa ou revisão do benefício, um advogado previdenciário pode representá-lo perante o INSS e, se necessário, na Justiça. Ele irá analisar o seu caso, reunir provas e argumentos jurídicos para garantir que você receba o benefício de forma justa e adequada à sua situação.</p>
 
-                                                                                <p>Em resumo, contratar uma firma de advocacia especializada em direito previdenciário para gerenciar o seu processo de Auxílio Doença ou Aposentadoria por Invalidez pode aumentar significativamente as suas chances de obter o benefício, além de garantir que seus direitos sejam protegidos durante todo o processo.</p>
+                                                                                <p>Contratar uma firma de advocacia especializada em direito previdenciário para gerenciar o seu processo de Auxílio Doença ou Aposentadoria por Invalidez pode aumentar significativamente as suas chances de obter o benefício, além de garantir que seus direitos sejam protegidos durante todo o processo.</p>
 
 
                                                                                 <div class="post-button-wrapper"></div>
