--- a/divorcios.html
+++ b/divorcios.html
@@ -952,7 +952,7 @@
                                                         data-widget_type="heading.default"
                                                     >
                                                         <div class="elementor-widget-container">
-                                                            <span class="elementor-heading-title elementor-size-default">&nbsp;</span>
+                                                            <span class="elementor-heading-title elementor-size-default">WhatsApp</span>
                                                         </div>
                                                     </div>
                                                     <div
@@ -963,7 +963,7 @@
                                                         data-widget_type="heading.default"
                                                     >
                                                         <div class="elementor-widget-container">
-                                                            <span class="elementor-heading-title elementor-size-default">&nbsp;</span>
+                                                            <span class="elementor-heading-title elementor-size-default">+55 62 99631-2928</span>
                                                         </div>
                                                     </div>
                                                 </div>
