--- a/index.html
+++ b/index.html
@@ -2230,7 +2230,7 @@
                                                         data-widget_type="heading.default"
                                                     >
                                                         <div class="elementor-widget-container">
-                                                            <span class="elementor-heading-title elementor-size-default">&nbsp;</span>
+                                                            <span class="elementor-heading-title elementor-size-default">WhatsApp</span>
                                                         </div>
                                                     </div>
                                                     <div
@@ -2241,7 +2241,7 @@
                                                         data-widget_type="heading.default"
                                                     >
                                                         <div class="elementor-widget-container">
-                                                            <span class="elementor-heading-title elementor-size-default">&nbsp;</span>
+                                                            <span class="elementor-heading-title elementor-size-default">+55 62 99631-2928</span>
                                                         </div>
                                                     </div>
                                                 </div>
