--- a/index.html
+++ b/index.html
@@ -2210,7 +2210,9 @@
                                                         data-widget_type="heading.default"
                                                     >
                                                         <div class="elementor-widget-container">
-                                                            <span class="elementor-heading-title elementor-size-default">+55 62 3661-2928</span>
+                                                            <a href="https://wa.me/556236612928?text=Olá! Vim pelo site e gostaria de mais informações.">
+                                                                <span class="elementor-heading-title elementor-size-default">+55 62 3661-2928</span>
+                                                            </a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -2241,7 +2243,9 @@
                                                         data-widget_type="heading.default"
                                                     >
                                                         <div class="elementor-widget-container">
-                                                            <span class="elementor-heading-title elementor-size-default">+55 62 99631-2928</span>
+                                                            <a href="https://wa.me/5562996312928?text=Olá! Vim pelo site e gostaria de mais informações.">
+                                                                <span class="elementor-heading-title elementor-size-default">+55 62 99631-2928</span>
+                                                            </a>
                                                         </div>
                                                     </div>
                                                 </div>
